exports[`Enumeration should render with header in add state and list in default state 1`] = `
<div
  className="undefined tc-enumeration">
  <header
    className="undefined tc-enumeration-header">
    <input
      autoFocus={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="New entry"
      type="text" />
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button">
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}>
        <use
          xlinkHref="#talend-check" />
      </svg>
    </button>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button">
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}>
        <use
          xlinkHref="#talend-cross" />
      </svg>
    </button>
  </header>
  <ul
    className="undefined tc-enumeration-items">
    <li
      className="undefined tc-enumeration-item">
      <div
        className="undefined tc-enumeration-item-label">
        Lorem ipsum dolor sit amet 0
      </div>
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-pencil" />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-trash" />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="undefined tc-enumeration-item">
      <div
        className="undefined tc-enumeration-item-label">
        Lorem ipsum dolor sit amet 1
      </div>
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-pencil" />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-trash" />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="undefined tc-enumeration-item">
      <div
        className="undefined tc-enumeration-item-label">
        Lorem ipsum dolor sit amet 2
      </div>
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-pencil" />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-trash" />
          </svg>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state and first item in edit mode 1`] = `
<div
  className="undefined tc-enumeration">
  <header
    className="undefined tc-enumeration-header">
    <span>
      Values
    </span>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button">
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}>
        <use
          xlinkHref="#talend-plus" />
      </svg>
    </button>
  </header>
  <ul
    className="undefined tc-enumeration-items">
    <li
      className="undefined tc-enumeration-item">
      <input
        autoFocus={true}
        className="undefined tc-enumeration-item-label"
        onBlur={[Function]}
        onKeyUp={[Function]}
        type="text" />
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-check" />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="undefined tc-enumeration-item">
      <div
        className="undefined tc-enumeration-item-label">
        Lorem ipsum dolor sit amet 1
      </div>
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-pencil" />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-trash" />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="undefined tc-enumeration-item">
      <div
        className="undefined tc-enumeration-item-label">
        Lorem ipsum dolor sit amet 2
      </div>
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-pencil" />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-trash" />
          </svg>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state and list in default state 1`] = `
<div
  className="undefined tc-enumeration">
  <header
    className="undefined tc-enumeration-header">
    <span>
      Values
    </span>
    <button
      aria-describedby={42}
      className="btn btn-link"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button">
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        title={null}>
        <use
          xlinkHref="#talend-plus" />
      </svg>
    </button>
  </header>
  <ul
    className="undefined tc-enumeration-items">
    <li
      className="undefined tc-enumeration-item">
      <div
        className="undefined tc-enumeration-item-label">
        Lorem ipsum dolor sit amet 0
      </div>
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-pencil" />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-trash" />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="undefined tc-enumeration-item">
      <div
        className="undefined tc-enumeration-item-label">
        Lorem ipsum dolor sit amet 1
      </div>
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-pencil" />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-trash" />
          </svg>
        </button>
      </div>
    </li>
    <li
      className="undefined tc-enumeration-item">
      <div
        className="undefined tc-enumeration-item-label">
        Lorem ipsum dolor sit amet 2
      </div>
      <div
        className="undefined tc-enumeration-item-actions">
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-pencil" />
          </svg>
        </button>
        <button
          aria-describedby={42}
          className="btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          role="link"
          type="button">
          <svg
            aria-hidden="true"
            className="tc-svg-icon"
            title={null}>
            <use
              xlinkHref="#talend-trash" />
          </svg>
        </button>
      </div>
    </li>
  </ul>
</div>
`;
